[package]
name = "zzobjman-rs"
version = "0.1.0"
authors = ["Jerry Wester <jerrywester@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
lazy_static = "1.4.0"
regex = "1.4.5"
